projects/hello-argjolan/hello-argjolan.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-argjolan
spec:
  selector:
    app: hello-argjolan
  ports:
    - protocol: "TCP"
      port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-argjolan-deployment
  labels:
    app: hello-argjolan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-argjolan
  template:
    metadata:
      labels:
        app: hello-argjolan
    spec:
      containers:
        - name: hello-argjolan
          image: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - name: hello-argjolan-configs
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: hello-argjolan-configs
          configMap:
            name: hello-argjolan-config
