projects/hello-argjolan/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-argjolan-ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - hello-argjolan.k8s.dewep.net
      secretName: hello-argjolan-ingress-certs
  rules:
    - host: hello-argjolan.k8s.dewep.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-argjolan
                port:
                  number: 80
